Back button,create account button and login button

--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -31,7 +31,7 @@
                 android:layout_height="60dp"
                 android:layout_marginTop="24dp"
                 android:background="@drawable/text_background"
-                android:drawableRight="@drawable/ic_baseline_smartphone_24"
+                android:drawableEnd="@drawable/ic_baseline_smartphone_24"
                 android:ems="10"
                 android:fontFamily="sans-serif"
                 android:hint="Phone number"
@@ -50,7 +50,7 @@
                 android:layout_height="60dp"
                 android:layout_marginTop="24dp"
                 android:background="@drawable/text_background"
-                android:drawableRight="@drawable/ic_baseline_lock_24"
+                android:drawableEnd="@drawable/ic_baseline_lock_24"
                 android:ems="10"
                 android:fontFamily="sans-serif"
                 android:hint="Strong Password"
@@ -68,7 +68,7 @@
                 android:layout_height="60dp"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/text_background"
-                android:drawableRight="@drawable/ic_baseline_person_24"
+                android:drawableEnd="@drawable/ic_baseline_person_24"
                 android:ems="10"
                 android:fontFamily="sans-serif"
                 android:hint="Full Name"
@@ -88,7 +88,7 @@
                 android:layout_height="60dp"
                 android:layout_marginTop="24dp"
                 android:background="@drawable/text_background"
-                android:drawableRight="@drawable/ic_baseline_email_24"
+                android:drawableEnd="@drawable/ic_baseline_email_24"
                 android:ems="10"
                 android:fontFamily="sans-serif"
                 android:hint="Email"
@@ -132,21 +132,22 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="New member?"
+                android:text="Already a member?"
                 android:textColor="@color/black"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.4"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/button"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintTop_toBottomOf="@+id/button" />
 
             <TextView
-                android:id="@+id/textView6"
+                android:id="@+id/loginButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="Regester Now"
+                android:clickable="true"
+                android:minWidth="48dp"
+                android:minHeight="48dp"
+                android:text="Login"
                 android:textColor="@color/purple_500"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.111"
